# pyk8sdev

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  publish-to-pypi.yml
src/pyk8sdev/: __init__.py  __main__.py  app.py  config.py  core.py  dom.tcss  exceptions.py  plugin.py
src/pyk8sdev/container/: __init__.py
src/pyk8sdev/helm/: __init__.py
src/pyk8sdev/k8s/: __init__.py  talos.py  utils.py
src/pyk8sdev/watcher/: __init__.py
tests/: __init__.py  conftest.py  test_config.py  test_container.py  test_helm.py  test_k8s.py  test_k8s_talos.py  test_k8s_utils.py  test_main.py  test_module.py  test_watcher.py
